# fahrenheit-451-python

./: README.md  pyproject.toml
scripts/: extract_connections.py  extract_objects.py  extract_rooms.py  extract_vocabulary.py
src/: main.py
src/data/: connections.json  objects.json  room_map.json  room_map_es.json  rooms.json  vocabulary.json
src/engine/: __init__.py  engine.py  inventory.py  parser.py  rooms.py  state.py
src/i18n/: __init__.py  en.json  es.json
src/ui/: __init__.py  terminal.py
